@@ -11,6 +11,7 @@ http://svn.edgewall.org/repos/babel/tags/0.9.0/
    manner.
  * The number formatting functions now also work with numbers represented by
    Python `Decimal` objects (ticket #53).
+ * Added extensible infrastructure for validating translation catalogs.
 
 
 Version 0.8.1
